Add form responses analytics dashboard with answer-based multi-filters

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,7 @@
 @import "./styles/pages/login.css";
 @import "./styles/pages/builder.css";
 @import "./styles/pages/preview.css";
+@import "./styles/pages/analytics.css";
 @import "./styles/components/overlays.css";
 @import "./styles/animations.css";
 @import "./styles/responsive.css";
